removed separator, fixed default scrollbar appears

--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,6 @@ body {
   text-align: left;
 }
 
-
-.separator {
-  height: 0px;
-  background-color: #6441a564;
-  margin-top: 0px; /* Reduce top margin to bring closer to header */
-  margin-bottom: 15px;
-  width: 400px; /* Keep the separator at 355px */
-}
-
   #loginButton {
     background-color: #6441a5;
     color: white;
@@ -136,6 +127,13 @@ body {
     text-decoration: none;
   }
   
+  #settingsIcon {
+    width: 35px; /* Set the maximum width */
+    height: 35px; /* Set the maximum height */
+    border-radius: 50%; /* Make it circular */
+    object-fit: cover;
+  }
+
   #settingsIcon:hover {
     color: #ff5722; /* Change the color to a different one on hover */
     transform: scale(1.2); /* Add a scaling effect on hover (optional) */
